# tailchaser

./: .gitignore  README.md
device/: CMakeLists.txt  main.cpp
device/application/: tailchaser.cpp  tailchaser.h
device/motiondetector/: motiondetector.cpp  motiondetector.h
device/storagemanager/: bucket.cpp  bucket.h  storagemanager.cpp  storagemanager.h
test_staticwebapp/: index.html  photoviewer.js
webapp/: package.json
webapp/tailchaser/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
webapp/tailchaser/e2e/src/: app.e2e-spec.ts
webapp/tailchaser/src/: index.html
webapp/tailchaser/src/app/: app.component.spec.ts  app.component.ts
